Crash in graph editor on right-click after baking sound to F-curve #83315

Closed
opened 2020-12-02 12:06:55 +01:00 by Alfred Morgan · 17 comments

System Information
Operating system: win 10
Graphics card: nvidia gtx 1080

Blender Version
Broken: 2.91, 2.92
Worked: 2.90.1, 2.83.9

Short description of error
Blender crashes when trying to open a menu when a baked f curve is in the graph editor.

Exact steps for others to reproduce the error
Based on the default startup or an attached .blend file.

  • Select cube
  • Insert a location key frame
  • Open the graph editor
  • Select e.g. the X location channel of the cube
  • Use the menu Key > Bake Sound to F-Curves
  • Select a music file

Right-click on a channel in the hierarchy

crash

**System Information** Operating system: win 10 Graphics card: nvidia gtx 1080 **Blender Version** Broken: 2.91, 2.92 Worked: 2.90.1, 2.83.9 **Short description of error** Blender crashes when trying to open a menu when a baked f curve is in the graph editor. **Exact steps for others to reproduce the error** Based on the default startup or an attached .blend file. - Select cube - Insert a location key frame - Open the graph editor - Select e.g. the X location channel of the cube - Use the menu *Key > Bake Sound to F-Curves* - Select a music file # Right-click on a channel in the hierarchy *crash*
Author

Added subscriber: @Zectbumo

Added subscriber: @Zectbumo

#84996 was marked as duplicate of this issue

#84996 was marked as duplicate of this issue

#85069 was marked as duplicate of this issue

#85069 was marked as duplicate of this issue

#83778 was marked as duplicate of this issue

#83778 was marked as duplicate of this issue

Added subscriber: @rjg

Added subscriber: @rjg

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'

I've tested this in 2.91.0 and 2.92.0 and couldn't reproduce a crash.

Please open Blender's installation directory and double click on the blender_debug_log.cmd. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt (or simply type %TEMP% into the path bar of the Windows Explorer).

2019_12_04_upload_icon_developer_blender_org.png

I've tested this in 2.91.0 and 2.92.0 and couldn't reproduce a crash. Please open Blender's installation directory and double click on the `blender_debug_log.cmd`. This will start Blender in debug mode and create log files. Try to make Blender crash again. Once it crashes the Windows Explorer should open and show you up to two files, a debug log and the system information. Add them to your bug report by clicking on the upload button as shown in the screenshot below or via drag and drop. Please also upload the crash log located in `C:\Users\[your username]\AppData\Local\Temp\[project name].crash.txt` (or simply type `%TEMP%` into the path bar of the Windows Explorer). ![2019_12_04_upload_icon_developer_blender_org.png](https://archive.blender.org/developer/F8190038/2019_12_04_upload_icon_developer_blender_org.png)

Does this only happen when using a particular music file?

Does this only happen when using a particular music file?
Author
[blender_debug_output.txt](https://archive.blender.org/developer/F9427178/blender_debug_output.txt) [blender_system_info.txt](https://archive.blender.org/developer/F9427181/blender_system_info.txt) [blender.crash.txt](https://archive.blender.org/developer/F9427188/blender.crash.txt)
Author

No, this was actually crashing on my friend using his own music so I reproduced the issue and filed the bug. I selected a random song from my local collection. I tried another song and also had the same crash results.

No, this was actually crashing on my friend using his own music so I reproduced the issue and filed the bug. I selected a random song from my local collection. I tried another song and also had the same crash results.
Robert Guetzkow changed title from crashes when opening a menu when a baked f curve is in the graph editor to Crash in graph editor on right-click after baking sound to F-curve 2020-12-03 12:34:45 +01:00

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'

I can reproduce the crash now. The crash happens because bezt is NULL in screen_ctx_selected_editable_keyframes.

screen_ctx_selected_editable_keyframes(const bContext * C, bContextDataResult * result) Line 1008	C
ed_screen_context(const bContext * C, const unsigned char * member, bContextDataResult * result) Line 1115	C
ctx_data_get(bContext * C, const unsigned char * member, bContextDataResult * result) Line 351	C
CTX_data_get(const bContext * C, const unsigned char * member, PointerRNA * r_ptr, ListBase * r_lb, short * r_type) Line 497	C
pyrna_struct_getattro(BPy_StructRNA * self, _object * pyname) Line 4278	C
[External Code]	
bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 8522	C
menu_draw(const bContext * C, Menu * menu) Line 875	C
UI_menutype_draw(bContext * C, MenuType * mt, uiLayout * layout) Line 5740	C
UI_popup_menu_invoke(bContext * C, const unsigned char * idname, ReportList * reports) Line 571	C
wm_call_menu_exec(bContext * C, wmOperator * op) Line 1798	C
wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1308	C
wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2143	C
wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2453	C
wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2750	C
wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2874	C
wm_event_do_handlers(bContext * C) Line 3370	C
WM_main(bContext * C) Line 638	C
main(int argc, const unsigned char * * UNUSED_argv_c) Line 526	C
[External Code]	
I can reproduce the crash now. The crash happens because `bezt` is `NULL` in `screen_ctx_selected_editable_keyframes`. ```lines screen_ctx_selected_editable_keyframes(const bContext * C, bContextDataResult * result) Line 1008 C ed_screen_context(const bContext * C, const unsigned char * member, bContextDataResult * result) Line 1115 C ctx_data_get(bContext * C, const unsigned char * member, bContextDataResult * result) Line 351 C CTX_data_get(const bContext * C, const unsigned char * member, PointerRNA * r_ptr, ListBase * r_lb, short * r_type) Line 497 C pyrna_struct_getattro(BPy_StructRNA * self, _object * pyname) Line 4278 C [External Code] bpy_class_call(bContext * C, PointerRNA * ptr, FunctionRNA * func, ParameterList * parms) Line 8522 C menu_draw(const bContext * C, Menu * menu) Line 875 C UI_menutype_draw(bContext * C, MenuType * mt, uiLayout * layout) Line 5740 C UI_popup_menu_invoke(bContext * C, const unsigned char * idname, ReportList * reports) Line 571 C wm_call_menu_exec(bContext * C, wmOperator * op) Line 1798 C wm_operator_invoke(bContext * C, wmOperatorType * ot, wmEvent * event, PointerRNA * properties, ReportList * reports, const bool poll_only, bool use_last_properties) Line 1308 C wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2143 C wm_handlers_do_keymap_with_keymap_handler(bContext * C, wmEvent * event, ListBase * handlers, wmEventHandler_Keymap * handler, wmKeyMap * keymap, const bool do_debug_handler) Line 2453 C wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2750 C wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2874 C wm_event_do_handlers(bContext * C) Line 3370 C WM_main(bContext * C) Line 638 C main(int argc, const unsigned char * * UNUSED_argv_c) Line 526 C [External Code] ```
Sybren A. Stüvel self-assigned this 2020-12-03 14:56:34 +01:00

This issue was referenced by 675d84826e

This issue was referenced by 675d84826e596d09b6ddba06915c949da61f087f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Added subscribers: @EnzioProbst, @ideasman42

Added subscribers: @EnzioProbst, @ideasman42
Member

Added subscribers: @raksa, @lichtwerk, @filedescriptor

Added subscribers: @raksa, @lichtwerk, @filedescriptor
Member

Added subscribers: @Ignazia, @ronsn

Added subscribers: @Ignazia, @ronsn
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#83315
No description provided.