Fix T83315: Crash showing animation channel context menu after baking sound

Fix a crash when right-clicking in the Graph Editor animation channel
list. The code for getting selected keyframes was not checking for baked
curves.